--- a/advent-of-code-2022/pom.xml
+++ b/advent-of-code-2022/pom.xml
@@ -4,18 +4,17 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.taciano-perez</groupId>
+  <groupId>org.tacianoperez</groupId>
   <artifactId>advent-of-code-2022</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>advent-of-code-2022</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/taciano-perez/advent-of-code-2022/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
